@@ -20,24 +20,16 @@ import com.intellij.openapi.extensions.impl.ExtensionPointImpl;
 import com.intellij.openapi.extensions.impl.ExtensionsAreaImpl;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.InvalidDataException;
-import com.intellij.openapi.util.JDOMUtil;
-import com.intellij.openapi.util.SafeJdomFactory;
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.util.text.StringUtilRt;
 import com.intellij.reference.SoftReference;
-import com.intellij.serialization.SerializationException;
 import com.intellij.util.*;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.execution.ParametersListUtil;
 import com.intellij.util.graph.DFSTBuilder;
 import com.intellij.util.graph.GraphGenerator;
-import com.intellij.util.io.URLUtil;
 import com.intellij.util.lang.UrlClassLoader;
-import org.jdom.Element;
-import org.jdom.JDOMException;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -49,13 +41,13 @@ import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.ref.Reference;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
-import java.util.concurrent.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionStage;
+import java.util.concurrent.ExecutionException;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -84,7 +76,7 @@ public final class PluginManagerCore {
 
   private static final PluginId SPECIAL_IDEA_PLUGIN_ID = PluginId.getId("IDEA CORE");
 
-  private static final String PROPERTY_PLUGIN_PATH = "plugin.path";
+  static final String PROPERTY_PLUGIN_PATH = "plugin.path";
 
   public static final String DISABLE = "disable";
   public static final String ENABLE = "enable";
@@ -615,8 +607,7 @@ public final class PluginManagerCore {
 
   private static @NotNull URL localFileToUrl(@NotNull Path file, @NotNull IdeaPluginDescriptor descriptor) {
     try {
-      // it is important not to have traversal elements in classpath
-      return new URL("file", "", file.normalize().toUri().getRawPath());
+      return file.normalize().toUri().toURL();  // it is important not to have traversal elements in classpath
     }
     catch (MalformedURLException e) {
       throw new PluginException("Corrupted path element: `" + file + '`', e, descriptor.getPluginId());
@@ -753,8 +744,14 @@ public final class PluginManagerCore {
       }
 
       IdeaPluginDescriptorImpl implicitDep = getImplicitDependency(rootDescriptor, javaDep, hasAllModules);
-      PluginId[] optionalDependentPluginIds = withOptional ? rootDescriptor.getOptionalDependentPluginIds() : PluginId.EMPTY_ARRAY;
-      int capacity = dependencies.size() - (withOptional ? 0 : optionalDependentPluginIds.length);
+      int capacity = dependencies.size();
+      if (!withOptional) {
+        for (PluginDependency dependency : dependencies) {
+          if (dependency.isOptional) {
+            capacity--;
+          }
+        }
+      }
       if (capacity == 0) {
         return implicitDep == null ? Collections.emptyList() : Collections.singletonList(implicitDep);
       }
@@ -772,10 +769,8 @@ public final class PluginManagerCore {
         }
       }
 
-      boolean excludeOptional = !withOptional && optionalDependentPluginIds.length > 0 && optionalDependentPluginIds.length != dependencies.size();
-
       for (PluginDependency dependency : dependencies) {
-        if (excludeOptional && dependency.isOptional) {
+        if (!withOptional && dependency.isOptional) {
           continue;
         }
 
@@ -837,228 +832,43 @@ public final class PluginManagerCore {
     }
   }
 
-  private static @Nullable IdeaPluginDescriptorImpl loadDescriptorFromDir(@NotNull Path file,
-                                                                          @NotNull String descriptorRelativePath,
-                                                                          @Nullable Path pluginPath,
-                                                                          @NotNull DescriptorLoadingContext context) {
-    Path descriptorFile = file.resolve(descriptorRelativePath);
-    try {
-      IdeaPluginDescriptorImpl descriptor = new IdeaPluginDescriptorImpl(pluginPath == null ? file : pluginPath, descriptorFile.getParent(), context.isBundled);
-      Element element = JDOMUtil.load(descriptorFile, context.parentContext.getXmlFactory());
-      descriptor.readExternal(element, context.pathResolver, context, descriptor);
-      return descriptor;
-    }
-    catch (NoSuchFileException e) {
-      return null;
-    }
-    catch (SerializationException | JDOMException | IOException e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.result.reportCannotLoad(context.parentContext, file, e);
-    }
-    catch (Throwable e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.getLogger().warn("Cannot load " + descriptorFile, e);
-    }
-    return null;
-  }
-
-  private static @Nullable IdeaPluginDescriptorImpl loadDescriptorFromJar(@NotNull Path file,
-                                                                          @NotNull String fileName,
-                                                                          @NotNull PathBasedJdomXIncluder.PathResolver<?> pathResolver,
-                                                                          @NotNull DescriptorLoadingContext context,
-                                                                          @Nullable Path pluginPath) {
-    SafeJdomFactory factory = context.parentContext.getXmlFactory();
-    try {
-      Path metaInf = context.open(file).getPath("/META-INF");
-      Element element;
-      try {
-        element = JDOMUtil.load(metaInf.resolve(fileName), factory);
-      }
-      catch (NoSuchFileException ignore) {
-        return null;
-      }
-
-      IdeaPluginDescriptorImpl descriptor = new IdeaPluginDescriptorImpl(pluginPath == null ? file : pluginPath, metaInf, context.isBundled);
-      if (descriptor.readExternal(element, pathResolver, context, descriptor)) {
-        descriptor.jarFiles = Collections.singletonList(descriptor.getPluginPath());
-      }
-      return descriptor;
-    }
-    catch (SerializationException | InvalidDataException e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.result.reportCannotLoad(context.parentContext, file, e);
-    }
-    catch (Throwable e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.getLogger().info("Cannot load " + file + "!/META-INF/" + fileName, e);
-    }
-
-    return null;
-  }
-
-  @ApiStatus.Internal
-  public static @Nullable IdeaPluginDescriptorImpl loadDescriptor(@NotNull Path file,
-                                                                   boolean isBundled,
-                                                                   @NotNull DescriptorListLoadingContext parentContext) {
-    try (DescriptorLoadingContext context = new DescriptorLoadingContext(parentContext, isBundled, /* isEssential = */ false,
-                                                                         PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER)) {
-      return loadDescriptorFromFileOrDir(file, PLUGIN_XML, context, Files.isDirectory(file));
-    }
-  }
-
-  static @Nullable IdeaPluginDescriptorImpl loadDescriptorFromFileOrDir(@NotNull Path file, @NotNull String pathName, @NotNull DescriptorLoadingContext context, boolean isDirectory) {
-    if (isDirectory) {
-      return loadDescriptorFromDirAndNormalize(file, pathName, context);
-    }
-    else if (StringUtilRt.endsWithIgnoreCase(file.getFileName().toString(), ".jar")) {
-      return loadDescriptorFromJar(file, pathName, context.pathResolver, context, null);
-    }
-    else {
-      return null;
-    }
-  }
-
-  private static @Nullable IdeaPluginDescriptorImpl loadDescriptorFromDirAndNormalize(@NotNull Path file,
-                                                                                      @NotNull String pathName,
-                                                                                      @NotNull DescriptorLoadingContext context) {
-    String descriptorRelativePath = META_INF + pathName;
-    IdeaPluginDescriptorImpl descriptor = loadDescriptorFromDir(file, descriptorRelativePath, null, context);
-    if (descriptor != null) {
-      return descriptor;
-    }
-
-    List<Path> pluginJarFiles = new ArrayList<>(), dirs = new ArrayList<>();
-    if (!collectPluginDirectoryContents(file, pluginJarFiles, dirs)) return null;
-
-    if (!pluginJarFiles.isEmpty()) {
-      PluginXmlPathResolver pathResolver = new PluginXmlPathResolver(pluginJarFiles, context);
-      for (Path jarFile : pluginJarFiles) {
-        descriptor = loadDescriptorFromJar(jarFile, pathName, pathResolver, context, file);
-        if (descriptor != null) {
-          descriptor.jarFiles = pluginJarFiles;
-          return descriptor;
-        }
-      }
-    }
-
-    for (Path dir : dirs) {
-      IdeaPluginDescriptorImpl otherDescriptor = loadDescriptorFromDir(dir, descriptorRelativePath, file, context);
-      if (otherDescriptor != null) {
-        if (descriptor != null) {
-          context.parentContext.getLogger().info("Cannot load " + file + " because two or more plugin.xml's detected");
-          return null;
-        }
-        descriptor = otherDescriptor;
-      }
-    }
-
-    return descriptor;
-  }
-
-  private static boolean collectPluginDirectoryContents(@NotNull Path file, @NotNull List<Path> pluginJarFiles, @NotNull List<Path> dirs) {
-    try (DirectoryStream<Path> s = Files.newDirectoryStream(file.resolve("lib"))) {
-      for (Path childFile : s) {
-        if (Files.isDirectory(childFile)) {
-          dirs.add(childFile);
-        }
-        else {
-          String path = childFile.toString();
-          if (StringUtilRt.endsWithIgnoreCase(path, ".jar") || StringUtilRt.endsWithIgnoreCase(path, ".zip")) {
-            pluginJarFiles.add(childFile);
-          }
-        }
-      }
-    }
-    catch (IOException e) {
-      return false;
-    }
-    if (!pluginJarFiles.isEmpty()) {
-      putMoreLikelyPluginJarsFirst(file, pluginJarFiles);
-    }
-    return true;
-  }
-
   @Nullable
   public static PathBasedJdomXIncluder.PathResolver<Path> createPluginJarsPathResolver(@NotNull Path pluginDir, @NotNull DescriptorLoadingContext context) {
     List<Path> pluginJarFiles = new ArrayList<>(), dirs = new ArrayList<>();
-    if (!collectPluginDirectoryContents(pluginDir, pluginJarFiles, dirs)) return null;
+    if (!PluginDescriptorLoader.collectPluginDirectoryContents(pluginDir, pluginJarFiles, dirs)) return null;
     return new PluginXmlPathResolver(pluginJarFiles, context);
   }
 
-  /*
-   * Sort the files heuristically to load the plugin jar containing plugin descriptors without extra ZipFile accesses
-   * File name preference:
-   * a) last order for files with resources in name, like resources_en.jar
-   * b) last order for files that have -digit suffix is the name e.g. completion-ranking.jar is before gson-2.8.0.jar or junit-m5.jar
-   * c) jar with name close to plugin's directory name, e.g. kotlin-XXX.jar is before all-open-XXX.jar
-   * d) shorter name, e.g. android.jar is before android-base-common.jar
-   */
-  private static void putMoreLikelyPluginJarsFirst(@NotNull Path pluginDir, @NotNull List<Path> filesInLibUnderPluginDir) {
-    String pluginDirName = pluginDir.getFileName().toString();
-
-    filesInLibUnderPluginDir.sort((o1, o2) -> {
-      String o2Name = o2.getFileName().toString();
-      String o1Name = o1.getFileName().toString();
-
-      boolean o2StartsWithResources = o2Name.startsWith("resources");
-      boolean o1StartsWithResources = o1Name.startsWith("resources");
-      if (o2StartsWithResources != o1StartsWithResources) {
-        return o2StartsWithResources ? -1 : 1;
-      }
-
-      boolean o2IsVersioned = fileNameIsLikeVersionedLibraryName(o2Name);
-      boolean o1IsVersioned = fileNameIsLikeVersionedLibraryName(o1Name);
-      if (o2IsVersioned != o1IsVersioned) {
-        return o2IsVersioned ? -1 : 1;
-      }
-
-      boolean o2StartsWithNeededName = StringUtil.startsWithIgnoreCase(o2Name, pluginDirName);
-      boolean o1StartsWithNeededName = StringUtil.startsWithIgnoreCase(o1Name, pluginDirName);
-      if (o2StartsWithNeededName != o1StartsWithNeededName) {
-        return o2StartsWithNeededName ? 1 : -1;
-      }
-
-      return o1Name.length() - o2Name.length();
-    });
-  }
-
-  private static boolean fileNameIsLikeVersionedLibraryName(@NotNull String name) {
-    int i = name.lastIndexOf('-');
-    if (i == -1) return false;
-    if (i + 1 < name.length()) {
-      char c = name.charAt(i + 1);
-      if (Character.isDigit(c)) return true;
-      return (c == 'm' || c == 'M') && i + 2 < name.length() && Character.isDigit(name.charAt(i + 2));
+  public static void getDescriptorsToMigrate(@NotNull Path dir,
+                                             @Nullable BuildNumber compatibleBuildNumber,
+                                             @Nullable String bundledPluginsPath,
+                                             @Nullable Map<PluginId, Set<String>> brokenPluginVersions,
+                                             List<IdeaPluginDescriptorImpl> pluginsToMigrate,
+                                             List<IdeaPluginDescriptorImpl> incompatiblePlugins) throws ExecutionException, InterruptedException {
+    PluginLoadingResult loadingResult = new PluginLoadingResult(
+      brokenPluginVersions != null ? brokenPluginVersions : getBrokenPluginVersions(),
+      () -> compatibleBuildNumber == null ? getBuildNumber() : compatibleBuildNumber
+    );
+    DescriptorListLoadingContext context = new DescriptorListLoadingContext(0, Collections.emptySet(), loadingResult);
+    if (bundledPluginsPath != null) {
+      context.loadBundledPlugins = true;
+      context.bundledPluginsPath = bundledPluginsPath;
     }
-    return false;
-  }
+    PluginDescriptorLoader.loadBundledDescriptorsAndDescriptorsFromDir(context, dir);
 
-  private static void loadDescriptorsFromDir(@NotNull Path dir,
-                                             boolean isBundled,
-                                             @NotNull DescriptorListLoadingContext context) throws ExecutionException, InterruptedException {
-    List<Future<IdeaPluginDescriptorImpl>> tasks = new ArrayList<>();
-    ExecutorService executorService = context.getExecutorService();
-    try (DirectoryStream<Path> dirStream = Files.newDirectoryStream(dir)) {
-      for (Path file : dirStream) {
-        tasks.add(executorService.submit(() -> loadDescriptor(file, isBundled, context)));
+    for (IdeaPluginDescriptorImpl descriptor : loadingResult.idMap.values()) {
+      if (!descriptor.isBundled()) {
+        if (loadingResult.isBroken(descriptor.getPluginId())) {
+          incompatiblePlugins.add(descriptor);
+        }
+        else {
+          pluginsToMigrate.add(descriptor);
+        }
       }
     }
-    catch (IOException ignore) {
-      return;
-    }
-
-    for (Future<IdeaPluginDescriptorImpl> task : tasks) {
-      IdeaPluginDescriptorImpl descriptor = task.get();
-      if (descriptor != null) {
-        context.result.add(descriptor,  /* overrideUseIfCompatible = */ false);
+    for (IdeaPluginDescriptorImpl descriptor : loadingResult.incompletePlugins.values()) {
+      if (!descriptor.isBundled()) {
+        incompatiblePlugins.add(descriptor);
       }
     }
   }
@@ -1093,154 +903,15 @@ public final class PluginManagerCore {
   public static @NotNull List<? extends IdeaPluginDescriptor> testLoadDescriptorsFromClassPath(@NotNull ClassLoader loader)
     throws ExecutionException, InterruptedException {
     Map<URL, String> urlsFromClassPath = new LinkedHashMap<>();
-    collectPluginFilesInClassPath(loader, urlsFromClassPath);
+    PluginDescriptorLoader.collectPluginFilesInClassPath(loader, urlsFromClassPath);
     BuildNumber buildNumber = BuildNumber.fromString("2042.42");
     DescriptorListLoadingContext context = new DescriptorListLoadingContext(0, Collections.emptySet(), new PluginLoadingResult(Collections.emptyMap(), () -> buildNumber, false));
     try (DescriptorLoadingContext loadingContext = new DescriptorLoadingContext(context, true, true, new ClassPathXmlPathResolver(loader))) {
-      loadDescriptorsFromClassPath(urlsFromClassPath, loadingContext, null);
+      PluginDescriptorLoader.loadDescriptorsFromClassPath(urlsFromClassPath, loadingContext, null);
     }
 
     context.result.finishLoading();
     return context.result.getEnabledPlugins();
-  }
-
-  private static void loadDescriptorsFromClassPath(@NotNull Map<URL, String> urls,
-                                                   @NotNull DescriptorLoadingContext context,
-                                                   @Nullable URL platformPluginURL) throws ExecutionException, InterruptedException {
-    if (urls.isEmpty()) {
-      return;
-    }
-
-    List<Future<IdeaPluginDescriptorImpl>> tasks = new ArrayList<>(urls.size());
-    ExecutorService executorService = context.parentContext.getExecutorService();
-    for (Map.Entry<URL, String> entry : urls.entrySet()) {
-      URL url = entry.getKey();
-      tasks.add(executorService.submit(() -> loadDescriptorFromResource(url, entry.getValue(), context.copy(url.equals(platformPluginURL)))));
-    }
-
-    PluginLoadingResult result = context.parentContext.result;
-    for (Future<IdeaPluginDescriptorImpl> task : tasks) {
-      IdeaPluginDescriptorImpl descriptor = task.get();
-      if (descriptor != null) {
-        if (!usePluginClassLoader) descriptor.setUseCoreClassLoader();
-        result.add(descriptor,  /* overrideUseIfCompatible = */ false);
-      }
-    }
-  }
-
-  private static @Nullable URL computePlatformPluginUrlAndCollectPluginUrls(@NotNull ClassLoader loader, @NotNull Map<URL, String> urls) {
-    String platformPrefix = System.getProperty(PlatformUtils.PLATFORM_PREFIX_KEY);
-    URL result = null;
-    if (platformPrefix != null) {
-      // should be the only plugin in lib (only for Ultimate and WebStorm for now)
-      if ((platformPrefix.equals(PlatformUtils.IDEA_PREFIX) || platformPrefix.equals(PlatformUtils.WEB_PREFIX)) && !isRunningFromSources()) {
-        urls.put(loader.getResource(PLUGIN_XML_PATH), PLUGIN_XML);
-        return null;
-      }
-
-      String fileName = platformPrefix + "Plugin.xml";
-      URL resource = loader.getResource(META_INF + fileName);
-      if (resource != null) {
-        urls.put(resource, fileName);
-        result = resource;
-      }
-    }
-    collectPluginFilesInClassPath(loader, urls);
-    return result;
-  }
-
-  private static void collectPluginFilesInClassPath(@NotNull ClassLoader loader, @NotNull Map<URL, String> urls) {
-    try {
-      Enumeration<URL> enumeration = loader.getResources(PLUGIN_XML_PATH);
-      while (enumeration.hasMoreElements()) {
-        urls.put(enumeration.nextElement(), PLUGIN_XML);
-      }
-    }
-    catch (IOException e) {
-      getLogger().info(e);
-    }
-  }
-
-  private static @Nullable IdeaPluginDescriptorImpl loadDescriptorFromResource(@NotNull URL resource, @NotNull String pathName, @NotNull DescriptorLoadingContext loadingContext) {
-    try {
-      Path file;
-      if (URLUtil.FILE_PROTOCOL.equals(resource.getProtocol())) {
-        file = Paths.get(StringUtil.trimEnd(FileUtilRt.toSystemIndependentName(urlToFile(resource).toString()), pathName)).getParent();
-        return loadDescriptorFromFileOrDir(file, pathName, loadingContext, Files.isDirectory(file));
-      }
-      else if (URLUtil.JAR_PROTOCOL.equals(resource.getProtocol())) {
-        String path = resource.getFile();
-        file = urlToFile(path.substring(0, path.indexOf(URLUtil.JAR_SEPARATOR)));
-        return loadDescriptorFromJar(file, pathName, loadingContext.pathResolver, loadingContext, null);
-      }
-      else {
-        return null;
-      }
-    }
-    catch (Throwable e) {
-      if (loadingContext.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      loadingContext.parentContext.getLogger().info("Cannot load " + resource, e);
-      return null;
-    }
-    finally {
-      loadingContext.close();
-    }
-  }
-
-  // work around corrupted URLs produced by File.getURL()
-  private static @NotNull Path urlToFile(@NotNull String url) throws URISyntaxException {
-    try {
-      return Paths.get(new URI(url));
-    }
-    catch (URISyntaxException e) {
-      if (url.indexOf(' ') > 0) {
-        return Paths.get(new URI(StringUtil.replace(url, " ", "%20")));
-      }
-      throw e;
-    }
-  }
-
-  // work around corrupted URLs produced by File.getURL()
-  private static @NotNull Path urlToFile(URL url) throws URISyntaxException, MalformedURLException {
-    try {
-      return Paths.get(url.toURI());
-    }
-    catch (URISyntaxException e) {
-      String str = url.toString();
-      if (str.indexOf(' ') > 0) {
-        return Paths.get(new URL(StringUtil.replace(str, " ", "%20")).toURI());
-      }
-      throw e;
-    }
-  }
-
-  private static void loadDescriptorsFromProperty(@NotNull PluginLoadingResult result,
-                                                  @NotNull DescriptorListLoadingContext context) {
-    String pathProperty = System.getProperty(PROPERTY_PLUGIN_PATH);
-    if (pathProperty == null) {
-      return;
-    }
-
-    for (StringTokenizer t = new StringTokenizer(pathProperty, File.pathSeparator + ","); t.hasMoreTokens(); ) {
-      String s = t.nextToken();
-      IdeaPluginDescriptorImpl descriptor = loadDescriptor(Paths.get(s), false, context);
-      if (descriptor != null) {
-        // plugins added via property shouldn't be overridden to avoid plugin root detection issues when running external plugin tests
-        result.add(descriptor,  /* overrideUseIfCompatible = */ true);
-      }
-    }
-  }
-
-  /**
-   * Think twice before use and get approve from core team.
-   *
-   * Returns enabled plugins only.
-   */
-  @ApiStatus.Internal
-  public static @NotNull List<? extends IdeaPluginDescriptor> loadUncachedDescriptors() {
-    return loadDescriptors().result.getEnabledPlugins();
   }
 
   public static void scheduleDescriptorLoading() {
@@ -1255,7 +926,7 @@ public final class PluginManagerCore {
 
     future = CompletableFuture.supplyAsync(() -> {
       Activity activity = StartUpMeasurer.startActivity("plugin descriptor loading");
-      DescriptorListLoadingContext context = loadDescriptors();
+      DescriptorListLoadingContext context = PluginDescriptorLoader.loadDescriptors();
       activity.end();
       return context;
     }, AppExecutorUtil.getAppExecutorService());
@@ -1281,52 +952,6 @@ public final class PluginManagerCore {
       loadAndInitializePlugins(context, coreClassLoader);
       return ourLoadedPlugins;
     });
-  }
-
-  @ApiStatus.Internal
-  private static @NotNull DescriptorListLoadingContext loadDescriptors() {
-    Map<URL, String> urlsFromClassPath = new LinkedHashMap<>();
-    ClassLoader classLoader = PluginManagerCore.class.getClassLoader();
-    URL platformPluginURL = computePlatformPluginUrlAndCollectPluginUrls(classLoader, urlsFromClassPath);
-    int flags = DescriptorListLoadingContext.IS_PARALLEL | DescriptorListLoadingContext.IGNORE_MISSING_SUB_DESCRIPTOR;
-    boolean isUnitTestMode = PluginManagerCore.isUnitTestMode;
-    if (isUnitTestMode) {
-      flags |= DescriptorListLoadingContext.IGNORE_MISSING_INCLUDE;
-    }
-    if (isUnitTestMode || isRunningFromSources()) {
-      flags |= DescriptorListLoadingContext.CHECK_OPTIONAL_CONFIG_NAME_UNIQUENESS;
-    }
-
-    PluginLoadingResult result = createLoadingResult(null);
-    DescriptorListLoadingContext context = new DescriptorListLoadingContext(flags, disabledPlugins(), result);
-    try {
-      try (DescriptorLoadingContext loadingContext = new DescriptorLoadingContext(context, /* isBundled = */ true, /* isEssential, doesn't matter = */ true, new ClassPathXmlPathResolver(classLoader))) {
-        loadDescriptorsFromClassPath(urlsFromClassPath, loadingContext, platformPluginURL);
-      }
-
-      loadDescriptorsFromDir(Paths.get(PathManager.getPluginsPath()), /* isBundled = */ false, context);
-
-      if (!isUnitTestMode) {
-        loadDescriptorsFromDir(Paths.get(PathManager.getPreInstalledPluginsPath()), /* isBundled = */ true, context);
-      }
-
-      loadDescriptorsFromProperty(result, context);
-
-      if (isUnitTestMode && result.enabledPluginCount() <= 1) {
-        // we're running in unit test mode, but the classpath doesn't contain any plugins; try to load bundled plugins anyway
-        context.usePluginClassLoader = true;
-        loadDescriptorsFromDir(Paths.get(PathManager.getPreInstalledPluginsPath()), /* isBundled = */ true, context);
-      }
-    }
-    catch (InterruptedException | ExecutionException e) {
-      throw new RuntimeException(e);
-    }
-    finally {
-      context.close();
-    }
-
-    context.result.finishLoading();
-    return context;
   }
 
   static @NotNull PluginLoadingResult createLoadingResult(@Nullable BuildNumber buildNumber) {
@@ -1880,10 +1505,10 @@ public final class PluginManagerCore {
     DescriptorListLoadingContext parentContext = DescriptorListLoadingContext.createSingleDescriptorContext(disabledPlugins());
     try (DescriptorLoadingContext context = new DescriptorLoadingContext(parentContext, true, true, PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER)) {
       if (Files.isDirectory(pluginRoot)) {
-        descriptor = loadDescriptorFromDir(pluginRoot, META_INF + fileName, null, context);
+        descriptor = PluginDescriptorLoader.loadDescriptorFromDir(pluginRoot, META_INF + fileName, null, context);
       }
       else {
-        descriptor = loadDescriptorFromJar(pluginRoot, fileName, PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER, context, null);
+        descriptor = PluginDescriptorLoader.loadDescriptorFromJar(pluginRoot, fileName, PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER, context, null);
       }
     }
 
@@ -1909,7 +1534,7 @@ public final class PluginManagerCore {
 
     try {
       if (context == null) {
-        context = loadDescriptors();
+        context = PluginDescriptorLoader.loadDescriptors();
       }
       Activity activity = StartUpMeasurer.startActivity("plugin initialization");
       PluginManagerState initResult = initializePlugins(context, coreLoader, !isUnitTestMode);
